<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fucknetkeeper.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setRoute" />
    
    
    <LinearLayout 
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/userName"/>
        <EditText 
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h1"/>
    </LinearLayout>
    <LinearLayout 
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <EditText 
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h2"/>
    </LinearLayout>
    <LinearLayout 
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/ip"/>
        <EditText 
            android:id="@+id/ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h3"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/setRoute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set"/>
    <LinearLayout 
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/real"/>
        <EditText 
            android:id="@+id/real"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <EditText 
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/lo"/>
        
    </RelativeLayout>
    
</LinearLayout>
